; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_provider.c_do_mac.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_provider.c_do_mac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@collect_mac_names = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @do_mac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_mac(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @collect_mac_names, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @EVP_MAC_gettable_params(i32* %7)
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @EVP_MAC_gettable_ctx_params(i32* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @EVP_MAC_settable_ctx_params(i32* %11)
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @do_method(i32* %5, i32 %6, i32 %8, i32 %10, i32 %12, i8* %13)
  ret void
}

declare dso_local i32 @do_method(i32*, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @EVP_MAC_gettable_params(i32*) #1

declare dso_local i32 @EVP_MAC_gettable_ctx_params(i32*) #1

declare dso_local i32 @EVP_MAC_settable_ctx_params(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
